--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         go-version: 1.20
 
+    - name: Install dependencies
+      run: |
+        go mod download
+        go get ./...
+
     - name: Build
       run: go build -v ./...
 
